<?xml version="1.0"?>
<package>
  <name>qfeel_serial</name>
  <version>0.0.0</version>
  <description>The qfeel_serial package</description>

  <maintainer email="renhaibo@qfeeltech.com">renhaibo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>  
  <run_depend>message_runtime</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <export>

  </export>
</package>
